--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
 
 /*
@@ -91,7 +90,7 @@
 	@media screen and (max-width: 480px) {
 
 		html, body {
-			min-width: 320px;
+			min-width: 280px;
 		}
 
 	}
@@ -2063,7 +2062,13 @@
 			font-style: normal;
 		}
 	
-	.testimonial {
+	.box.testimonials {
+		background: #f5f5f5;
+		box-shadow: none;
+		height: 100%;
+	}
+
+	.quote {
 		text-align: left;
 		margin-bottom: 1em;
 	}
@@ -2452,6 +2457,10 @@
 			.icon.major.accent5 {
 				background: #e5cb95;
 				color: #ffffff;
+			}
+			
+			.icon.stars {
+				color: #9B829F;
 			}
 
 /* Image */
@@ -3752,6 +3761,10 @@
 						margin-top: 2em;
 					}
 
+				.box.testimonials {
+					height: auto;
+				}
+
 		/* Banner */
 
 			#banner {
@@ -3813,7 +3826,7 @@
 		/* Basic */
 
 			html, body {
-				min-width: 320px;
+				min-width: 280px;
 			}
 
 			body, input, select, textarea {
